Small changes in readme

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
     <button id="generatePdf2">Generate PDF (htm2pdf)</button>
     <button id="generatePdf3">Generate PDF (htm2pdf.it)</button>
 
+    <div> TODO
+        <object data="file.pdf" type="application/pdf" width="1000" height="550">
+        </object>
+    </div>
+
     <script type="text/javascript" src="./index.js"></script>
 </body>
 
