--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 
     <!-- If devBuild or prodBuild executed with using externals, then these 2 lines should be added manually.-->
     
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    
 </head>
 
 <body>
     <div class="app" id="app"></div>
-<script type="text/javascript" src="/cv.js"></script></body>
+<script type="text/javascript" src="./cv.js"></script></body>
 
 </html>
