--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     
-</head>
+<link href="./cv.css" rel="stylesheet"></head>
 
 <body>
     <div class="app" id="app"></div>
