--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CV</title>
-
-    <!-- If devBuild or prodBuild executed with using externals, then these 2 lines should be added manually.-->
-    
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    
-<link href="./cv.css" rel="stylesheet"></head>
-
-<body>
-    <div class="app" id="app"></div>
-<script type="text/javascript" src="./cv.js"></script></body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/alundiak/cv/favicon.ico"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/alundiak/cv/logo192.png"/><link rel="manifest" href="/alundiak/cv/manifest.json"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><meta http-equiv="X-UA-Compatible" content="IE=edge"><title>CV</title><script defer="defer" src="/alundiak/cv/static/js/main.b3f201cd.js"></script><link href="/alundiak/cv/static/css/main.dd8b154b.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
